--- a/exercise-1/templates/home.html
+++ b/exercise-1/templates/home.html
@@ -6,33 +6,37 @@
 <a href="/order">+ New Order</a>
 
 {% for pizza in pizza_orders %}
-<div class="pizza_order">
-    <p>
-        <strong>Size</strong>: {{ pizza.size.value }} 
-    </p>
-    <p>
-        <strong>Crust Type</strong>: {{ pizza.crust_type.value }} crust
-    </p>
+    {% if pizza_orders %}
+    <div class="pizza_order">
+        <p>
+            <strong>Size</strong>: {{ pizza.size.value }} 
+        </p>
+        <p>
+            <strong>Crust Type</strong>: {{ pizza.crust_type.value }}
+        </p>
 
-    <p>
-        <strong>Ordered By</strong>: {{ pizza.order_name }}
-    </p>
+        <p>
+            <strong>Ordered By</strong>: {{ pizza.order_name }}
+        </p>
 
-    <p>
-        <strong>Toppings</strong>:
-        <ul>
-            {% for topping in pizza.toppings %}
-            <li>{{ topping.topping_type.value }}</li>
-            {% endfor %}
-        </ul>
-    </p>
+        <p>
+            <strong>Toppings</strong>:
+            <ul>
+                {% for topping in pizza.toppings %}
+                <li>{{ topping.topping_type.value }}</li>
+                {% endfor %}
+            </ul>
+        </p>
 
-    <form action="/fulfill" method="POST">
-        <input type="hidden" name="pizza_id" value="{{ pizza.id }}">
-        <input type="submit" value="Fulfill Order">
-    </form>
-</div>
-{% else %}
-<p>No pizza orders to show!</p>
+        <form action = "{{ url_for('fulfill_order', pizza_id=pizza.id) }}" method="POST">
+            <input type="hidden" name="pizza_id" value="{{ pizza.id }}">
+            <input type="submit" value="Fulfill Order">
+        </form>
+    </div>
+
+    {% else %}
+    <p>No pizza orders to show!</p>
+    {% endif %}
+
 {% endfor %}
 {% endblock %}
