--- a/exercise-1/templates/order.html
+++ b/exercise-1/templates/order.html
@@ -41,14 +41,16 @@
         </p>
         <p>
             {% for topping in toppings %}
-            <label>
-                <input type="checkbox" name="toppings" value="{{ topping.name }}">
-                {{ topping.value }}
-            </label><br>
+                <label>
+                    <input type="checkbox" name="{{ toppingVars[loop.index] }}" value="{{ topping.name }}">
+                    {{ topping.value }}
+                </label><br>
             {% endfor %}
         </p>
 
         <input type="submit" value="Submit Order!">
+
     </fieldset>
+    
 </form>
 {% endblock %}
