--- a/exercise-2/templates/results.html
+++ b/exercise-2/templates/results.html
@@ -3,7 +3,7 @@
 
 <section>
     <h1>Weather in {{ city }}</h1>
-    <p>on {{ date.strftime('%A, %B %-d, %Y at %-I:%M %p') }}</p>
+    <p>on {{ date.strftime('%Y-%m-%d %H:%M %p') }}</p>
     
 
     <ul>
